// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonV2 render as an anchor with href prop 1`] = `
<DocumentFragment>
  .cache-jq0g2q-link-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-jq0g2q-link-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jq0g2q-link-StyledFilledButton:hover,
.cache-jq0g2q-link-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<a
    class="cache-jq0g2q-link-StyledFilledButton e1su13oj3"
    href="http://scaleway.com"
    type="button"
  >
    Scaleway
  </a>
</DocumentFragment>
`;

exports[`ButtonV2 render large 1`] = `
<DocumentFragment>
  .cache-3372nq-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-3372nq-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3372nq-StyledFilledButton:hover,
.cache-3372nq-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-3372nq-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render medium 1`] = `
<DocumentFragment>
  .cache-xsu1gm-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-xsu1gm-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-xsu1gm-StyledFilledButton:hover,
.cache-xsu1gm-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-xsu1gm-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render small 1`] = `
<DocumentFragment>
  .cache-14wlrm4-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-14wlrm4-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-14wlrm4-StyledFilledButton:hover,
.cache-14wlrm4-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-14wlrm4-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with fullWidth 1`] = `
<DocumentFragment>
  .cache-1cax28j-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1cax28j-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1cax28j-StyledFilledButton:hover,
.cache-1cax28j-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-1cax28j-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon 1`] = `
<DocumentFragment>
  .cache-1x039oo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1x039oo-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon on the right 1`] = `
<DocumentFragment>
  .cache-1o44pf8-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1o44pf8-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon only 1`] = `
<DocumentFragment>
  .cache-1o44pf8-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1o44pf8-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with isLoading with icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1x039oo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-1x039oo-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with isLoading without icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1x039oo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-1x039oo-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&danger 1`] = `
<DocumentFragment>
  .cache-9swqgz-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

<button
    class="cache-9swqgz-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&danger disabled 1`] = `
<DocumentFragment>
  .cache-9swqgz-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

<button
    class="cache-9swqgz-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&info 1`] = `
<DocumentFragment>
  .cache-j6ce5v-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

<button
    class="cache-j6ce5v-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&info disabled 1`] = `
<DocumentFragment>
  .cache-j6ce5v-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

<button
    class="cache-j6ce5v-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&neutral 1`] = `
<DocumentFragment>
  .cache-1lmfvbm-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

<button
    class="cache-1lmfvbm-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1lmfvbm-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

<button
    class="cache-1lmfvbm-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&primary 1`] = `
<DocumentFragment>
  .cache-1x039oo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

<button
    class="cache-1x039oo-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&primary disabled 1`] = `
<DocumentFragment>
  .cache-1x039oo-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

<button
    class="cache-1x039oo-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&success 1`] = `
<DocumentFragment>
  .cache-2ui0ye-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

<button
    class="cache-2ui0ye-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&success disabled 1`] = `
<DocumentFragment>
  .cache-2ui0ye-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

<button
    class="cache-2ui0ye-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&warning 1`] = `
<DocumentFragment>
  .cache-oj27ky-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

<button
    class="cache-oj27ky-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&warning disabled 1`] = `
<DocumentFragment>
  .cache-oj27ky-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

<button
    class="cache-oj27ky-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&danger 1`] = `
<DocumentFragment>
  .cache-1hu2g1n-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

<button
    class="cache-1hu2g1n-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&danger disabled 1`] = `
<DocumentFragment>
  .cache-1hu2g1n-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

<button
    class="cache-1hu2g1n-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&info 1`] = `
<DocumentFragment>
  .cache-1un3stv-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

<button
    class="cache-1un3stv-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&info disabled 1`] = `
<DocumentFragment>
  .cache-1un3stv-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

<button
    class="cache-1un3stv-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&neutral 1`] = `
<DocumentFragment>
  .cache-1cmoii3-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

<button
    class="cache-1cmoii3-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1cmoii3-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

<button
    class="cache-1cmoii3-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&primary 1`] = `
<DocumentFragment>
  .cache-1pfr204-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

<button
    class="cache-1pfr204-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&primary disabled 1`] = `
<DocumentFragment>
  .cache-1pfr204-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

<button
    class="cache-1pfr204-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&success 1`] = `
<DocumentFragment>
  .cache-1w4nuk8-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

<button
    class="cache-1w4nuk8-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&success disabled 1`] = `
<DocumentFragment>
  .cache-1w4nuk8-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

<button
    class="cache-1w4nuk8-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&warning 1`] = `
<DocumentFragment>
  .cache-ieal3v-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

<button
    class="cache-ieal3v-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&warning disabled 1`] = `
<DocumentFragment>
  .cache-ieal3v-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

<button
    class="cache-ieal3v-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&danger 1`] = `
<DocumentFragment>
  .cache-1lx4uq9-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

<button
    class="cache-1lx4uq9-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&danger disabled 1`] = `
<DocumentFragment>
  .cache-1lx4uq9-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

<button
    class="cache-1lx4uq9-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&info 1`] = `
<DocumentFragment>
  .cache-f17pwn-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

<button
    class="cache-f17pwn-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&info disabled 1`] = `
<DocumentFragment>
  .cache-f17pwn-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

<button
    class="cache-f17pwn-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&neutral 1`] = `
<DocumentFragment>
  .cache-112opzw-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

<button
    class="cache-112opzw-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&neutral disabled 1`] = `
<DocumentFragment>
  .cache-112opzw-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

<button
    class="cache-112opzw-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&primary 1`] = `
<DocumentFragment>
  .cache-r2na7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

<button
    class="cache-r2na7-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&primary disabled 1`] = `
<DocumentFragment>
  .cache-r2na7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

<button
    class="cache-r2na7-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&success 1`] = `
<DocumentFragment>
  .cache-11mcab5-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

<button
    class="cache-11mcab5-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&success disabled 1`] = `
<DocumentFragment>
  .cache-11mcab5-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

<button
    class="cache-11mcab5-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&warning 1`] = `
<DocumentFragment>
  .cache-1mpciqu-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

<button
    class="cache-1mpciqu-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&warning disabled 1`] = `
<DocumentFragment>
  .cache-1mpciqu-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

<button
    class="cache-1mpciqu-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;
